--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 .grid {
     width: 200px;
     height: 200px;
-    border: 1px solid gray ;
+    border: 1px solid black ;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -16,6 +16,11 @@ body {
     height: 20px;
     border:1px black solid;
 box-sizing:border-box
+  }
+
+.scoreDisplay {
+      font-size: 18px;
+      font-weight: bold;
   }
 
   .snake {
@@ -30,7 +35,7 @@ box-sizing:border-box
   .popup {
     background: rgb(32, 31, 31);
     width: 100px;
-    height: 100px;
+    height: 50px;
     position: fixed;
     top: 100px;
     left: 100px;
